--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: WEB Spring 2016
+title: WEB
 #email: arielle.hein@colorado.edu
 description: Course website for ATLS 2200.
 baseurl: '/web-spring-16'
