--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ title: WEB Spring 2016
 #email: arielle.hein@colorado.edu
 description: Course website for ATLS 2200. Site buit and maintained by Arielle Hein.
 baseurl: '/web-spring-16'
-#url: "web-spring-16.com" # the base hostname & protocol for your site
+# baseurl: ''
+# url: "web-spring-16.com" # the base hostname & protocol for your site
 
 # github_username:  coloringchaos
 
